src/objects/RM_Approved_Distributor__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Material__c</fullName>
        <label>Raw Material</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipLabel>RM Approved Distributor</relationshipLabel>
        <relationshipName>Approved_Distributor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RM Approved Distributor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Raw_Material__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RM Approved Distributor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>